[gd_scene load_steps=11 format=4 uid="uid://b68ec8fvjd1l5"]

[ext_resource type="Texture2D" uid="uid://bpe1lqn6usccg" path="res://Tiles.png" id="1_gkhr0"]
[ext_resource type="Script" path="res://ground.gd" id="1_iyu0g"]
[ext_resource type="PackedScene" uid="uid://ds1itpob76efe" path="res://player.tscn" id="2_3rqpp"]
[ext_resource type="Texture2D" uid="uid://bhsia0kyofwmf" path="res://Pixelated Japanese Landscape Serenity.png" id="4_l70to"]
[ext_resource type="PackedScene" uid="uid://cn8msmmfwrag2" path="res://health_bar.tscn" id="5_uxub7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ftyx1"]
texture = ExtResource("1_gkhr0")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0

[sub_resource type="TileSet" id="TileSet_thle7"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ftyx1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inupu"]
size = Vector2(19, 184)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dswwf"]
size = Vector2(18.5, 176)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3lt8q"]
bg_color = Color(1, 1, 1, 1)

[node name="ground" type="Node2D"]
script = ExtResource("1_iyu0g")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_thle7")
format = 2

[node name="ground" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
position = Vector2(7, 37)
tile_map_data = PackedByteArray("AAAFAAwAAAABAAMAAAAFAA0AAAABAAIAAAAFAA4AAAABAAMAAAAGAAwAAAACAAMAAAAGAA0AAAACAAIAAAAGAA4AAAACAAMAAAAHAAwAAAADAAMAAAAHAA0AAAADAAIAAAAHAA4AAAADAAMAAAAIAAwAAAABAAMAAAAIAA0AAAABAAIAAAAIAA4AAAABAAMAAAAJAAwAAAACAAMAAAAJAA0AAAACAAIAAAAJAA4AAAACAAMAAAAKAAwAAAADAAMAAAAKAA0AAAADAAIAAAAKAA4AAAADAAMAAAALAAwAAAABAAMAAAALAA0AAAABAAIAAAALAA4AAAABAAMAAAAMAAwAAAACAAMAAAAMAA0AAAACAAIAAAAMAA4AAAACAAMAAAANAAwAAAADAAMAAAANAA0AAAADAAIAAAANAA4AAAADAAMAAAAOAAwAAAABAAMAAAAOAA0AAAABAAIAAAAOAA4AAAABAAMAAAAPAAwAAAACAAMAAAAPAA0AAAACAAIAAAAPAA4AAAACAAMAAAAQAAwAAAADAAMAAAAQAA0AAAADAAIAAAAQAA4AAAADAAMAAAARAAwAAAABAAMAAAARAA0AAAABAAIAAAARAA4AAAABAAMAAAASAAwAAAACAAMAAAASAA0AAAACAAIAAAASAA4AAAACAAMAAAATAAwAAAADAAMAAAATAA0AAAADAAIAAAATAA4AAAADAAMAAAAUAAwAAAABAAMAAAAUAA0AAAABAAIAAAAUAA4AAAABAAMAAAAVAAwAAAACAAMAAAAVAA0AAAACAAIAAAAVAA4AAAACAAMAAAAWAAwAAAADAAMAAAAWAA0AAAADAAIAAAAWAA4AAAADAAMAAAAXAAwAAAABAAMAAAAXAA0AAAABAAIAAAAXAA4AAAABAAMAAAAYAAwAAAACAAMAAAAYAA0AAAACAAIAAAAYAA4AAAACAAMAAAAZAAwAAAADAAMAAAAZAA0AAAADAAIAAAAZAA4AAAADAAMAAAAaAAwAAAABAAMAAAAaAA0AAAABAAIAAAAaAA4AAAABAAMAAAAbAAwAAAACAAMAAAAbAA0AAAACAAIAAAAbAA4AAAACAAMAAAAcAAwAAAADAAMAAAAcAA0AAAADAAIAAAAcAA4AAAADAAMAAAAdAAwAAAABAAMAAAAdAA0AAAABAAIAAAAdAA4AAAABAAMAAAAeAAwAAAACAAMAAAAeAA0AAAACAAIAAAAeAA4AAAACAAMAAAAfAAwAAAADAAMAAAAfAA0AAAADAAIAAAAfAA4AAAADAAMAAAAgAAwAAAAEAAIAAAAgAA0AAAAEAAMAAAAgAA4AAAAEAAQAAADq/wUAAAAAAAEAAADq/wYAAAAAAAIAAADq/wcAAAAAAAMAAADq/wgAAAAAAAIAAADq/wkAAAAAAAIAAADq/woAAAAAAAMAAADq/wsAAAAAAAQAAADq/wwAAAAAAAIAAADq/w0AAAAAAAMAAADq/w4AAAAAAAQAAADr/wUAAAABAAEAAADr/wYAAAABAAIAAADr/wcAAAABAAMAAADr/wgAAAABAAIAAADr/wkAAAABAAMAAADr/woAAAABAAMAAADr/wsAAAABAAIAAADr/wwAAAABAAMAAADr/w0AAAABAAIAAADr/w4AAAABAAMAAADs/wUAAAABAAEAAADs/wYAAAABAAIAAADs/wcAAAABAAMAAADs/wgAAAACAAIAAADs/wkAAAACAAMAAADs/woAAAACAAMAAADs/wsAAAACAAIAAADs/wwAAAACAAMAAADs/w0AAAACAAIAAADs/w4AAAACAAMAAADt/wUAAAACAAEAAADt/wYAAAACAAIAAADt/wcAAAABAAIAAADt/wgAAAADAAIAAADt/wkAAAADAAMAAADt/woAAAADAAMAAADt/wsAAAADAAIAAADt/wwAAAADAAMAAADt/w0AAAADAAIAAADt/w4AAAADAAMAAADu/wUAAAADAAEAAADu/wYAAAADAAIAAADu/wcAAAACAAIAAADu/wgAAAACAAMAAADu/wkAAAACAAIAAADu/woAAAACAAMAAADu/wsAAAACAAIAAADu/wwAAAACAAMAAADu/w0AAAACAAIAAADu/w4AAAACAAMAAADv/wUAAAABAAEAAADv/wYAAAABAAIAAADv/wcAAAADAAIAAADv/wgAAAADAAMAAADv/wkAAAADAAIAAADv/woAAAADAAMAAADv/wsAAAADAAIAAADv/wwAAAADAAMAAADv/w0AAAADAAIAAADv/w4AAAADAAMAAADw/wUAAAACAAEAAADw/wYAAAACAAIAAADw/wcAAAADAAIAAADw/wgAAAADAAMAAADw/wkAAAADAAIAAADw/woAAAADAAMAAADw/wsAAAADAAIAAADw/wwAAAADAAMAAADw/w0AAAACAAIAAADw/w4AAAACAAMAAADx/wUAAAADAAEAAADx/wYAAAADAAIAAADx/wcAAAABAAIAAADx/wgAAAABAAMAAADx/wkAAAABAAIAAADx/woAAAABAAMAAADx/wsAAAABAAIAAADx/wwAAAABAAMAAADx/w0AAAADAAIAAADx/w4AAAADAAMAAADy/wUAAAACAAEAAADy/wYAAAACAAIAAADy/wcAAAACAAIAAADy/wgAAAACAAMAAADy/wkAAAACAAIAAADy/woAAAACAAMAAADy/wsAAAACAAIAAADy/wwAAAACAAMAAADy/w0AAAACAAIAAADy/w4AAAACAAMAAADz/wUAAAADAAEAAADz/wYAAAADAAIAAADz/wcAAAADAAIAAADz/wgAAAADAAMAAADz/wkAAAADAAIAAADz/woAAAADAAMAAADz/wsAAAADAAIAAADz/wwAAAADAAMAAADz/w0AAAADAAIAAADz/w4AAAADAAMAAAD0/wUAAAABAAEAAAD0/wYAAAABAAIAAAD0/wcAAAABAAMAAAD0/wgAAAACAAIAAAD0/wkAAAACAAMAAAD0/woAAAACAAIAAAD0/wsAAAABAAIAAAD0/wwAAAABAAMAAAD0/w0AAAABAAIAAAD0/w4AAAABAAMAAAD1/wUAAAACAAEAAAD1/wYAAAACAAIAAAD1/wcAAAACAAMAAAD1/wgAAAADAAIAAAD1/wkAAAADAAMAAAD1/woAAAADAAIAAAD1/wsAAAACAAIAAAD1/wwAAAACAAMAAAD1/w0AAAACAAIAAAD1/w4AAAACAAMAAAD2/wUAAAADAAEAAAD2/wYAAAADAAIAAAD2/wcAAAADAAMAAAD2/wgAAAABAAIAAAD2/wkAAAABAAMAAAD2/woAAAABAAIAAAD2/wsAAAADAAIAAAD2/wwAAAADAAMAAAD2/w0AAAABAAIAAAD2/w4AAAABAAMAAAD3/wUAAAABAAEAAAD3/wYAAAABAAIAAAD3/wcAAAABAAMAAAD3/wgAAAACAAIAAAD3/wkAAAACAAMAAAD3/woAAAACAAIAAAD3/wsAAAABAAIAAAD3/wwAAAABAAMAAAD3/w0AAAACAAIAAAD3/w4AAAACAAMAAAD4/wUAAAACAAEAAAD4/wYAAAACAAIAAAD4/wcAAAACAAMAAAD4/wgAAAADAAIAAAD4/wkAAAADAAMAAAD4/woAAAADAAIAAAD4/wsAAAACAAIAAAD4/wwAAAACAAMAAAD4/w0AAAADAAIAAAD4/w4AAAADAAMAAAD5/wUAAAADAAEAAAD5/wYAAAADAAIAAAD5/wcAAAADAAMAAAD5/wgAAAABAAIAAAD5/wkAAAABAAMAAAD5/woAAAABAAIAAAD5/wsAAAADAAIAAAD5/wwAAAADAAMAAAD5/w0AAAABAAIAAAD5/w4AAAABAAMAAAD6/wUAAAABAAEAAAD6/wYAAAABAAIAAAD6/wcAAAABAAMAAAD6/wgAAAACAAIAAAD6/wkAAAACAAMAAAD6/woAAAACAAIAAAD6/wsAAAACAAMAAAD6/wwAAAACAAIAAAD6/w0AAAACAAIAAAD6/w4AAAACAAMAAAD7/wUAAAACAAEAAAD7/wYAAAACAAIAAAD7/wcAAAACAAMAAAD7/wgAAAADAAIAAAD7/wkAAAADAAMAAAD7/woAAAADAAIAAAD7/wsAAAADAAMAAAD7/wwAAAADAAIAAAD7/w0AAAADAAIAAAD7/w4AAAADAAMAAAD8/wUAAAADAAEAAAD8/wYAAAADAAIAAAD8/wcAAAADAAMAAAD8/wgAAAABAAIAAAD8/wkAAAABAAMAAAD8/woAAAABAAIAAAD8/wsAAAABAAMAAAD8/wwAAAABAAIAAAD8/w0AAAABAAIAAAD8/w4AAAABAAMAAAD9/wUAAAABAAEAAAD9/wYAAAABAAIAAAD9/wcAAAABAAMAAAD9/wgAAAACAAIAAAD9/wkAAAACAAMAAAD9/woAAAACAAIAAAD9/wsAAAACAAMAAAD9/wwAAAACAAIAAAD9/w0AAAACAAIAAAD9/w4AAAACAAMAAAD+/wUAAAACAAEAAAD+/wYAAAACAAIAAAD+/wcAAAACAAMAAAD+/wgAAAADAAIAAAD+/wkAAAADAAMAAAD+/woAAAADAAIAAAD+/wsAAAADAAMAAAD+/wwAAAADAAIAAAD+/w0AAAADAAIAAAD+/w4AAAADAAMAAAD//wUAAAADAAEAAAD//wYAAAADAAIAAAD//wcAAAADAAMAAAD//wgAAAABAAIAAAD//wkAAAABAAMAAAD//woAAAABAAIAAAD//wsAAAABAAIAAAD//wwAAAABAAMAAAD//w0AAAABAAIAAAD//w4AAAABAAMAAAAAAAUAAAABAAEAAAAAAAYAAAABAAIAAAAAAAcAAAABAAMAAAAAAAgAAAACAAIAAAAAAAkAAAACAAMAAAAAAAoAAAACAAIAAAAAAAsAAAACAAIAAAAAAAwAAAACAAMAAAAAAA0AAAACAAIAAAAAAA4AAAACAAMAAAABAAUAAAACAAEAAAABAAYAAAACAAIAAAABAAcAAAACAAMAAAABAAgAAAADAAIAAAABAAkAAAADAAMAAAABAAoAAAADAAIAAAABAAsAAAADAAIAAAABAAwAAAADAAMAAAABAA0AAAADAAIAAAABAA4AAAADAAMAAAACAAUAAAADAAEAAAACAAYAAAADAAIAAAACAAcAAAADAAMAAAACAAgAAAABAAIAAAACAAkAAAABAAMAAAACAAoAAAABAAIAAAACAAsAAAABAAIAAAACAAwAAAABAAMAAAACAA0AAAABAAIAAAACAA4AAAABAAMAAAADAAUAAAABAAEAAAADAAYAAAABAAIAAAADAAcAAAABAAMAAAADAAgAAAACAAIAAAADAAkAAAACAAMAAAADAAoAAAACAAIAAAADAAsAAAACAAIAAAADAAwAAAACAAMAAAADAA0AAAACAAIAAAADAA4AAAACAAMAAAAEAAUAAAACAAEAAAAEAAYAAAACAAIAAAAEAAcAAAACAAMAAAAEAAgAAAADAAIAAAAEAAkAAAADAAMAAAAEAAoAAAADAAIAAAAEAAsAAAADAAIAAAAEAAwAAAADAAMAAAAEAA0AAAADAAIAAAAEAA4AAAADAAMAAAAFAAUAAAADAAEAAAAFAAYAAAADAAIAAAAFAAcAAAADAAMAAAAFAAgAAAABAAIAAAAFAAkAAAABAAMAAAAFAAoAAAABAAIAAAAFAAsAAAABAAIAAAAGAAUAAAABAAEAAAAGAAYAAAABAAIAAAAGAAcAAAABAAMAAAAGAAgAAAACAAIAAAAGAAkAAAACAAMAAAAGAAoAAAACAAIAAAAGAAsAAAACAAIAAAAHAAUAAAACAAEAAAAHAAYAAAACAAIAAAAHAAcAAAACAAMAAAAHAAgAAAADAAIAAAAHAAkAAAADAAMAAAAHAAoAAAADAAIAAAAHAAsAAAADAAIAAAAIAAUAAAADAAEAAAAIAAYAAAADAAIAAAAIAAcAAAADAAMAAAAIAAgAAAABAAIAAAAIAAkAAAABAAIAAAAIAAoAAAABAAMAAAAIAAsAAAABAAIAAAAJAAUAAAABAAEAAAAJAAYAAAABAAIAAAAJAAcAAAABAAMAAAAJAAgAAAACAAIAAAAJAAkAAAACAAIAAAAJAAoAAAACAAMAAAAJAAsAAAACAAIAAAAKAAUAAAACAAEAAAAKAAYAAAACAAIAAAAKAAcAAAACAAMAAAAKAAgAAAADAAIAAAAKAAkAAAADAAIAAAAKAAoAAAADAAMAAAAKAAsAAAADAAIAAAALAAUAAAADAAEAAAALAAYAAAADAAIAAAALAAcAAAADAAMAAAALAAgAAAABAAIAAAALAAkAAAABAAMAAAALAAoAAAABAAIAAAALAAsAAAABAAIAAAAMAAUAAAABAAEAAAAMAAYAAAABAAIAAAAMAAcAAAABAAMAAAAMAAgAAAACAAIAAAAMAAkAAAACAAMAAAAMAAoAAAACAAIAAAAMAAsAAAACAAIAAAANAAUAAAACAAEAAAANAAYAAAACAAIAAAANAAcAAAACAAMAAAANAAgAAAADAAIAAAANAAkAAAADAAMAAAANAAoAAAADAAIAAAANAAsAAAADAAIAAAAOAAUAAAADAAEAAAAOAAYAAAADAAIAAAAOAAcAAAADAAMAAAAOAAgAAAABAAIAAAAOAAkAAAABAAMAAAAOAAoAAAABAAIAAAAOAAsAAAABAAIAAAAPAAUAAAABAAEAAAAPAAYAAAABAAIAAAAPAAcAAAABAAMAAAAPAAgAAAACAAIAAAAPAAkAAAACAAMAAAAPAAoAAAACAAIAAAAPAAsAAAACAAIAAAAQAAUAAAACAAEAAAAQAAYAAAACAAIAAAAQAAcAAAACAAMAAAAQAAgAAAADAAIAAAAQAAkAAAADAAMAAAAQAAoAAAADAAIAAAAQAAsAAAADAAIAAAARAAUAAAADAAEAAAARAAYAAAADAAIAAAARAAcAAAADAAMAAAARAAgAAAABAAIAAAARAAkAAAABAAMAAAARAAoAAAABAAIAAAARAAsAAAABAAIAAAASAAUAAAABAAEAAAASAAYAAAABAAIAAAASAAcAAAABAAMAAAASAAgAAAACAAIAAAASAAkAAAACAAMAAAASAAoAAAACAAIAAAASAAsAAAACAAIAAAATAAUAAAACAAEAAAATAAYAAAACAAIAAAATAAcAAAACAAMAAAATAAgAAAADAAIAAAATAAkAAAADAAMAAAATAAoAAAADAAIAAAATAAsAAAADAAIAAAAUAAUAAAADAAEAAAAUAAYAAAADAAIAAAAUAAcAAAADAAMAAAAUAAgAAAABAAIAAAAUAAkAAAABAAMAAAAUAAoAAAABAAIAAAAUAAsAAAABAAIAAAAVAAUAAAABAAEAAAAVAAYAAAABAAIAAAAVAAcAAAABAAMAAAAVAAgAAAACAAIAAAAVAAkAAAACAAMAAAAVAAoAAAACAAIAAAAVAAsAAAACAAIAAAAWAAUAAAACAAEAAAAWAAYAAAACAAIAAAAWAAcAAAACAAMAAAAWAAgAAAADAAIAAAAWAAkAAAADAAMAAAAWAAoAAAADAAIAAAAWAAsAAAADAAIAAAAXAAUAAAADAAEAAAAXAAYAAAADAAIAAAAXAAcAAAADAAMAAAAXAAgAAAABAAIAAAAXAAkAAAABAAMAAAAXAAoAAAABAAIAAAAXAAsAAAABAAIAAAAYAAUAAAABAAEAAAAYAAYAAAABAAIAAAAYAAcAAAABAAMAAAAYAAgAAAACAAIAAAAYAAkAAAACAAMAAAAYAAoAAAACAAIAAAAYAAsAAAACAAIAAAAZAAUAAAACAAEAAAAZAAYAAAACAAIAAAAZAAcAAAACAAMAAAAZAAgAAAADAAIAAAAZAAkAAAADAAMAAAAZAAoAAAADAAIAAAAZAAsAAAADAAIAAAAaAAUAAAADAAEAAAAaAAYAAAADAAIAAAAaAAcAAAADAAMAAAAaAAgAAAABAAIAAAAaAAkAAAABAAMAAAAaAAoAAAABAAIAAAAaAAsAAAABAAIAAAAbAAUAAAADAAEAAAAbAAYAAAADAAIAAAAbAAcAAAADAAMAAAAbAAgAAAACAAIAAAAbAAkAAAACAAMAAAAbAAoAAAACAAIAAAAbAAsAAAACAAIAAAAcAAUAAAABAAEAAAAcAAYAAAABAAIAAAAcAAcAAAABAAMAAAAcAAgAAAADAAIAAAAcAAkAAAADAAMAAAAcAAoAAAADAAIAAAAcAAsAAAADAAIAAAAdAAUAAAACAAEAAAAdAAYAAAABAAIAAAAdAAcAAAABAAMAAAAdAAgAAAABAAIAAAAdAAkAAAABAAMAAAAdAAoAAAABAAIAAAAdAAsAAAABAAIAAAAeAAUAAAADAAEAAAAeAAYAAAACAAIAAAAeAAcAAAACAAMAAAAeAAgAAAACAAIAAAAeAAkAAAACAAMAAAAeAAoAAAACAAIAAAAeAAsAAAACAAIAAAAfAAUAAAADAAEAAAAfAAYAAAADAAIAAAAfAAcAAAADAAMAAAAfAAgAAAADAAIAAAAfAAkAAAADAAMAAAAfAAoAAAADAAIAAAAfAAsAAAADAAIAAAAgAAUAAAAEAAEAAAAgAAYAAAAEAAIAAAAgAAcAAAAEAAMAAAAgAAgAAAAEAAIAAAAgAAkAAAAEAAMAAAAgAAoAAAAEAAIAAAAgAAsAAAAEAAMAAAA=")
tile_set = SubResource("TileSet_thle7")

[node name="player" parent="." instance=ExtResource("2_3rqpp")]
position = Vector2(56, 89)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-2, 27)
shape = SubResource("RectangleShape2D_inupu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(290, 26)
shape = SubResource("RectangleShape2D_dswwf")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(161, 53)
scale = Vector2(0.315674, 0.289551)
texture = ExtResource("4_l70to")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Playerbar" parent="CanvasLayer" instance=ExtResource("5_uxub7")]
offset_left = 9.0
offset_top = 1.0
offset_right = 111.0
offset_bottom = 15.0

[node name="AIbar" parent="CanvasLayer" instance=ExtResource("5_uxub7")]
offset_left = 176.0
offset_top = 2.0
offset_right = 280.0
offset_bottom = 15.0
theme_override_styles/fill = SubResource("StyleBoxFlat_3lt8q")

[node name="countdown" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -44.0
offset_right = 16.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownTimer" type="Timer" parent="CanvasLayer"]

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
offset_left = 120.0
offset_top = 55.0
offset_right = 160.0
offset_bottom = 78.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="CanvasLayer/CountdownTimer" to="." method="_on_Countdown_timer_timeout"]
